[package]
name = "oobe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-hex = "0.2.0"
eframe = "0.22.0"
egui = { version = "0.22.0", features = ["color-hex"] }
egui_extras = { version = "0.22.0", features = ["image"] }
